[package]
name = "expr-sled-intro"
version = "0.1.0"
authors = ["Wink Saville <wink@saville.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.125", features = ["derive"] }
sled = "0.34.6"
